--- a/root/GIP WEBSITE/styles/styles.css
+++ b/root/GIP WEBSITE/styles/styles.css
@@ -5,34 +5,75 @@ body {
 }
 
 
-#mainlogo {
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem;
+	vertical-align:center;
+}
+
+.logo {
+	font-size: 1.5rem;
+	margin: 0 auto;
+	position: relative;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
+	align-items: center;
+}
+
+.right-nav-items {
+	list-style: none;
+	display: flex;
+}
+
+.nav-item {
+	margin-right: 1rem;
+}
+
+.search-container {
+	display: flex;
+	
+	
+}
+
+.search-input {
+	border: none;
+	border-radius: 25px;
+	padding: 0.5rem 1rem;
+	font-size: 1rem;
+	outline: none;
+	width: auto;
+}
+
+.search-icon {
+	cursor: pointer;
+	margin-right: 0.5rem;
+	color: gray;
+}
+
+@media screen and (max-width: 600px) {
+	nav {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.right-nav-items {
+		display: none;
+	}
+
+	.burger-menu {
+		display: block;
+	}
+
+	.burger-menu .nav-item {
+		margin: 1rem 0;
+		text-align: center;
+	}
 }
 
 
-#header {
-	height: 100px;
-	background-color: #F3F2ED;
-	margin: 0;
-	padding: 0;
-	margin: auto;
-	text-align: center;
-	padding-top: 30px;
-
-}
-
-#header h1 {
-	font-size: 1em;
-	margin: 0;
-	padding: 10px;
-}
-
-#header h1 a {
-	color: #000000;
-	background-color: #F3F2ED;
-}
 
 .content {
 	height: 300px;
@@ -78,91 +119,7 @@ h1 {
 	color: white
 }
 
-.carousel1,
-.carousel2 {
-	width: 100%;
-	overflow: hidden;
-	position: relative;
 
-
-}
-
-.carousel-items {
-	display: flex;
-	transition: transform 0.5s ease;
-	margin-right: 100px;
-	margin-left: 100px;
-	width: 100%;
-}
-
-.carousel-item {
-	flex: 0 0 calc(16.66667% - 20px);
-	height: 200px;
-	margin: 10px;
-	background-color: lightgray;
-	text-align: center;
-	line-height: 150px;
-	font-size: 32px;
-	color: white;
-	align-items: center;
-	justify-content: center;
-	border-radius: 10px;
-	border: solid rgb(110, 99, 99) 2px;
-}
-
-.carousel-image {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-}
-
-.carousel-button {
-	position: absolute;
-	top: 50%;
-	width: 50px;
-	height: 50px;
-	transform: translateY(-50%);
-	background-color: rgba(255, 255, 255, 0.5);
-	border: none;
-	border-radius: 50%;
-	cursor: pointer;
-
-	transition: opacity 0.5s ease;
-}
-
-.carousel-button:hover,
-.carousel-button:focus {
-	opacity: 1;
-}
-
-.carousel-button-prev {
-	left: 20px;
-}
-
-.carousel-button-next {
-	right: 20px;
-}
-
-.carousel-button svg {
-	width: 24px;
-	height: 24px;
-	fill: #666;
-}
-
-@media (max-width: 800px) {
-	.carousel-item {
-		flex: 0 0 calc(50% - 20px);
-	}
-
-}
-
-.carousel-items img {
-	transition: transform 0.2s ease;
-}
-
-.carousel-items img:hover {
-	transform: scale(1.1);
-}
 
 .footer-container {
 	display: flex;
@@ -198,7 +155,268 @@ h1 {
 	padding: 0;
 }
 
-	
-	
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+}
 
-  
+:root {
+	--handle-size: 3rem;
+	--img-gap: .25rem;
+}
+
+
+.container {
+	display: flex;
+	justify-content: center;
+	overflow: hidden;
+
+}
+
+.slider {
+	--items-per-screen: 4;
+	--slider-index: 0;
+	display: flex;
+	flex-grow: 1;
+	margin: 0 var(--img-gap);
+	transform: translateX(calc(var(--slider-index) * -100%));
+	transition: transform 250ms ease-in-out;
+
+}
+
+.slider>img {
+	flex: 0 0 calc(100% / var(--items-per-screen));
+	max-width: calc(100% / var(--items-per-screen));
+	aspect-ratio: 16 / 9;
+	padding: var(--img-gap);
+	border-radius: 1rem;
+	background-color: #f0f0f0;
+	border: solid 3px #504e42;
+	border-collapse: collapse;
+	margin: 2px;
+
+}
+
+.handle {
+	border: none;
+	border-radius: 1rem;
+	flex-grow: 0;
+	flex-shrink: 0;
+	background-color: rgba(236, 233, 225, 0.25);
+	z-index: 10;
+	margin: var(--img-gap) 0;
+	width: var(--handle-size);
+	cursor: pointer;
+	font-size: 5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: white;
+	line-height: 0;
+	transition: background-color 150ms ease-in-out;
+}
+
+.left-handle {
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+.right-handle {
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.handle:hover,
+.handle:focus {
+	background-color: rgba(255, 255, 255, .5);
+}
+
+.text {
+	transition: transform 150ms ease-in-out;
+}
+
+.handle:hover .text,
+.handle:focus .text {
+	transform: scale(1.2);
+}
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	padding: .5rem calc(var(--img-gap) * 2 + var(--handle-size));
+	align-items: center;
+}
+
+.title {
+	font-size: 2rem;
+	margin: 0;
+}
+
+.progress-bar {
+	display: flex;
+	gap: .25rem;
+}
+
+.progress-item {
+	flex: 0 0 1.5rem;
+	min-width: 1.5rem;
+	height: .5rem;
+	background-color: rgba(255, 255, 255, .5);
+}
+
+.progress-item.active {
+	background-color: rgba(255, 255, 255, .9);
+}
+
+@media (max-width: 1000px) {
+	.slider {
+		--items-per-screen: 3;
+	}
+
+	body {
+		width: 100%;
+	}
+}
+
+@media (max-width: 500px) {
+	.slider {
+		--items-per-screen: 1;
+	}
+
+	.footer-container {
+		padding-left: 10px;
+
+	}
+
+	body {
+		width: 100%;
+	}
+
+}
+
+
+body {
+	background-color: rgb(97, 93, 85);
+	color: white;
+
+}
+
+h3 {
+	padding-right: 5px;
+}
+
+#hamburger-menu {
+	display: none;
+}
+
+@media (max-width: 500px) {
+	body {
+		width: 100%;
+	}
+
+	#hamburger-menu {
+		display: block;
+		padding-left: 450px;
+		margin-bottom: 500px;
+		color: #000000;
+	}
+
+}
+
+
+.overlay {
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	right: 0;
+	background-color: rgb(230, 213, 213);
+	background-color: rgba(199, 199, 199, 0.9);
+	overflow-x: hidden;
+	transition: 0.5s;
+
+}
+
+
+.closebtn {
+	position: absolute;
+	top: 20px;
+	right: 45px;
+	font-size: 60px;
+	margin-left: 50px;
+	color: #000000;
+}
+
+
+.overlay-content {
+	position: relative;
+	top: 25%;
+	width: 100%;
+	text-align: center;
+	margin-top: 30px;
+}
+
+
+.overlay.hidden {
+	width: 0;
+}
+
+img:hover {
+	transform: scale(0.9);
+	transition: 0.5s ease;
+}
+
+#search-container {
+	display: none;
+	position: fixed;
+	top: 60px;
+	right: 50px;
+	width: 40%;
+	height: 40px;
+	background-color: white;
+	border-radius: 20px;
+	transition: 0.3s;
+	z-index: 1;
+	text-align: left;
+}
+
+#search-container.active {
+	display: block;
+}
+
+#search-container input[type="text"] {
+	width: 80%;
+	padding: 10px;
+	border: none;
+	border-radius: 20px 0 0 20px;
+	float: left;
+	font-size: 16px;
+}
+
+#search-container button[type="submit"] {
+	width: 20%;
+	padding: 10px;
+	background-color: black;
+	color: white;
+	border: none;
+	border-radius: 0 20px 20px 0;
+	cursor: pointer;
+	float: right;
+	font-size: 16px;
+}
+
+#search-container button[type="submit"]:hover {
+	background-color: white;
+	color: black;
+}
+
+.closebtn {
+	position: absolute;
+	top: 10px;
+	right: 15px;
+	color: black;
+	font-size: 40px;
+	cursor: pointer;
+}
